# d8-disassembler

./: .gitignore  README.md  patcher.ps1
.github/workflows/: build.yml
patches/codegen/: code-stub-assembler.cc.psm1  external-reference.h.psm1
patches/common/: globals.h.psm1
patches/d8/: d8.cc.psm1  d8.h.psm1  disassemble.cc  metadata.cc
patches/diagnostics/: objects-printer.cc.psm1
patches/objects/: string.cc.psm1
patches/snapshot/: snapshot.cc.psm1
scripts/: args.gn  build.ps1  fetch.ps1
