dcheck_always_on = false
is_component_build = false
is_debug = false
target_cpu = "x64"
use_custom_libcxx = false
v8_monolithic = false
v8_use_external_startup_data = true

v8_static_library = true
v8_enable_disassembler = true
v8_enable_object_print = true
v8_enable_sandbox = true
v8_enable_pointer_compression = true
v8_enable_pointer_compression_shared_cage = true
v8_enable_external_code_space = true

treat_warnings_as_errors = false
